# taguchi_face_recognition_resnet_v1_openvino_fp16_optimized

./: README.md  poetry-requirements.txt  pyproject.toml  taguchi_face_recognition_resnet_v1_openvino_fp16_optimized.xml
demo/: LICENSE  demo.py
demo/asset/: A Young Kids Smiling Together · Free Stock Photo.url  Girls Celebrating Birthday · Free Stock Photo.url
